Wed May 17 17:26:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* BM25Weight and TradWeight now ask their statssource for information
	  about the RSet, rather than asking the rset directly.  As a result,
	  they no longer have or need an "RSet * rset" member.

Wed May 17 17:09:35 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* RSet now has a give_stats_to_statssource() method, used by
	  localmatch to pass the statistics to the stats system for
	  sharing and merging.

Wed May 17 15:56:52 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Pass relevance sets around as OmRSets, only creating an RSet within
	  LocalMatch.  RSet now has a method to tell it to calculate the
	  statistics, which is called after the query has been constructed,
	  paving the way for integration with StatsSources.

Wed May 17 15:56:36 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Ensure that the a refcount pointer is not made from a standard pointer
	  more than once.

Tue May 16 16:29:25 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* apitest now performs its own indexing for tests.  Next step is to
	  stop nettest using the internal indexing in InMemoryDatabase and
	  then stop InMemoryDatabase accepting path parameters.

Tue May 16 15:07:46 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added add_database() method to OmDatabaseGroup which takes an
	  OmDatabase object, instead of parameters for opening a database.

Tue May 16 12:48:40 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Assignment operators for OmDatabase and OmWritableDatabase are
	  now safe: assignment of a OmDatabase to an OmWritableDatabase
	  will either fail to compile or throw an exception, all other
	  possibilities will work.

Tue May 16 12:22:33 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Now pass match options over the net link.  (Untested so far)
